--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^9.0.0",
     "file-saver": "^2.0.1",
     "firebase": "^9.6.7",
+    "firebaseui": "^6.0.2",
     "moment": "^2.24.0",
     "query-string": "^7.0.0",
     "react": "^17.0.2",
