--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "query-string": "^7.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^8.1.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
+    "redux": "^4.2.1",
     "typeface-exo": "1.1.13",
     "typeface-roboto": "1.1.13"
   },
